--- a/puppyrest/about.html
+++ b/puppyrest/about.html
@@ -72,7 +72,7 @@
                   Dignissim sodales ut eu sem integer vitae. Facilisis magna
                   etiam tempor orci eu. Pharetra pharetra massa massa ultricies
                   mi quis. Mattis rhoncus urna neque viverra justo nec. Egestas
-                  purus viverra accumsan in nisl nisi scelerisque.
+                  purus viverra accumsan in nisl nisi scelerisque. MM
             </p>
 
             <p>
